# sair-eq-distill

./: .env.example  .gitignore  AUTORESEARCH.md  CHANGELOG.md  CLAUDE.md  CURRENT_STATE.md  PROJECT.md  README.md  TODO.md  coordinator.md  program.md  pyproject.toml  watch.sh
analysis/: ablation_study.py  analyze_dag_features.py  analyze_equations.py  analyze_implications.py  analyze_quotient_dag.py  analyze_substitution.py  analyze_tree_patterns.py  compute_satisfaction.py  multi_feature_predictor.py
cheatsheets/: best.txt  current.txt  seed_empty.txt  v10_calibrated.txt  v11_gpt54.txt  v12_audit.txt  v13_decision_list.txt  v14_minimal.txt  v15_concise.txt  v16_replay.txt  v5_distilled.txt  v6_focused.txt  v6a_no_assoc_warning.txt  v7_with_intermediates.txt  v8_pseudocode.txt  v9_one_example.txt
data/: download.py
data/raw/: hard.jsonl
docs/: RESEARCH.md
eval/: analyze_errors.py  eval_robust.py  evaluate.py  test_models.py
issues/: I-001-bootstrap.md  I-002-cheatsheet-optimization.md  I-003-playground-validation.md  I-004-workflow-alignment.md
optim/: analyze_and_generate.py  api_logger.py  compute_features.py  cycle4_analysis.py  deep_analysis.py  evolve_append.py  evolve_cheatsheet.py  evolve_v2.py  generate_cheatsheet_cycle4d.py  generate_cheatsheet_cycle5c.py  openevolve_setup.py  sheetevolve.py
research/: README.md
research/notes/: ab-test-session2.md  alphaevolve-v2-plan.md  autoresearch_techniques.md  birkhoff-completeness.md  cheatsheet-harm-hypothesis.md  codex-strategy-review.md  compressed-cheatsheet-vision.md  creative-approaches.md  (+27 more)
(+25 files in other folders)
